--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.23.0",
     "sort-by": "^1.2.0"
   },
