--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,10 +13,15 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
-    "nodemailer": "^6.9.13"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
+    "puppeteer": "^22.10.0"
   },
-  "engines": {"node": "20.3.0"}
+  "engines": {
+    "node": "20.3.0"
+  }
 }
