--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "axios": "^1.7.2",
     "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
+    "redux": "^5.0.1",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
