--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,17 +10,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "docxtemplater": "^3.47.4",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "file-saver": "^2.0.5",
+    "form-data": "^4.0.0",
+    "fs": "^0.0.1-security",
+    "fs.promises": "^0.1.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
-    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
-    "puppeteer": "^22.10.0"
+    "path": "^0.12.7",
+    "pizzip": "^3.1.7"
   },
   "engines": {
     "node": "20.3.0"
